# RoBoBo

./: CONFIGURING  Cargo.toml  INSTALL  LICENSE  MODULES  Makefile  PROTOCOL  README  README.md  SOCKET  TODO  channel.cpp  channel.h  compile.sh  config.cpp  config.h  configuration.cpp  configure.cpp  connection.h  lineParser.cpp  lineParser.h  main.h  modinclude.h  modinterface.cpp  moduleBase.cpp  moduleBase.h  module_make.sh  modules.cpp  modules.h  robobo.conf.example  robobo.cpp  robobo.h  server.cpp  server.h  servercapab.cpp  socket.cpp  socket.h  user.cpp
modules/: Makefile  bot_admin.h  dcc_chat.h  m_admin.cpp  m_admin_channels.cpp  m_admin_connect.cpp  m_admin_die.cpp  m_admin_loadmod.cpp  m_admin_raw.cpp  m_admin_rehash.cpp  m_admin_say.cpp  m_admin_unloadmod.cpp  m_ctcppingreply.cpp  m_ctcptimereply.cpp  m_ctcpversionreply.cpp  m_dccchat.cpp  m_helloworld.cpp  m_modetest.cpp  m_services_identify.cpp  m_setx.cpp  modinclude.h
sockets/plaintext/: Cargo.toml
sockets/rustls/: Cargo.toml
src/: Makefile  base.cpp  base.h  channel.cpp  config.cpp  config.h  config.rs  configure.cpp  connection.h  data_manager.rs  globpattern.cpp  globpattern.h  irc_data.rs  ircmessage.cpp  ircmessage.h  lib.rs  logger.rs  logmanager.cpp  logmanager.h  main.h  main.rs  modhooks.h  modinterface.cpp  module.cpp  module.h  module_communication.rs  module_module.rs  modulemanager.cpp  modulemanager.h  modules.cpp  modules.h  mutexlocker.cpp  mutexlocker.h  protocol.cpp  protocol.h  protocol_module.rs  robobo.cpp  robobo.h  server.cpp  servermanager.cpp  (+7 more)
src/modtypes/: basemodule.h  (+5 more)
(+57 files in other folders)
