[package]
name = "robobo"
version = "3.0.0-dev"
authors = ["ElementalAlchemist <ElementAlchemist7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"
clap = "2.33.0"
libc = "0.2.66"
libloading = "0.5"
signal-hook = "0.1.13"